--- a/ktakayama/opencvsample/opencvsample/opencvsample.vcxproj
+++ b/ktakayama/opencvsample/opencvsample/opencvsample.vcxproj
@@ -149,10 +149,12 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="IPfunc.cpp" />
     <ClCompile Include="opencvsample.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="IPfunc.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
