--- a/toyoshi/sec1/CMakeLists.txt
+++ b/toyoshi/sec1/CMakeLists.txt
@@ -46,7 +46,6 @@ INCLUDE_DIRECTORIES(${OPENCV_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 include_directories(${OPENGL_INCLUDE_DIRS})
 
-
 # ライブラリの場所
 LINK_DIRECTORIES("/usr/local/lib")
 
@@ -54,6 +53,7 @@ LINK_DIRECTORIES("/usr/local/lib")
 ADD_EXECUTABLE(cv_shokyu opencv_sample.cpp)
 
 # ライブラリとリンクする
-TARGET_LINK_LIBRARIES(cv_shokyu ${OpenCV_LIBRARIES} ${Boost_LIBRARIES} ${OPENGL_LIBRARIES} )
+TARGET_LINK_LIBRARIES(cv_shokyu toyocv_imgproc ${OpenCV_LIBRARIES} ${Boost_LIBRARIES} ${OPENGL_LIBRARIES})
+
 # バージョン番号の適用
 # SET_TARGET_PROPERTIES(cv_shokyu PROPERTIES VERSION ${serial})
