--- a/toyoshi/toyocv/modules/imgproc/CMakeLists.txt
+++ b/toyoshi/toyocv/modules/imgproc/CMakeLists.txt
@@ -50,7 +50,7 @@ TARGET_LINK_LIBRARIES(toyocv_imgproc ${OpenCV_LIBRARIES} ${Boost_LIBRARIES})
 SET_TARGET_PROPERTIES(toyocv_imgproc PROPERTIES VERSION ${serial} SOVERSION ${soserial})
 
 # 共有ライブラリのインストール指定
-# INSTALL(TARGETS toyocv_imgproc LIBRARY DESTINATION lib)
+INSTALL(TARGETS toyocv_imgproc LIBRARY DESTINATION lib)
 # 共有ライブラリ用ヘッダーファイルのインストール指定
 INSTALL(FILES ${toyocv_imgproc_include}
 	      DESTINATION include/toyocv)
