--- a/toyoshi/sec1/CMakeLists.txt
+++ b/toyoshi/sec1/CMakeLists.txt
@@ -15,6 +15,8 @@ set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g -pg -O3")
 set(CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG -O3")
 set(CMAKE_CXX_FLAGS_MINSIZEREL "")
 SET (CMAKE_CXX_FLAGS "-pg")
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive -pg")
 
