--- a/ktakayama/opencvsample/opencvsample/opencvsample.vcxproj
+++ b/ktakayama/opencvsample/opencvsample/opencvsample.vcxproj
@@ -149,11 +149,12 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="IPfunc.cpp" />
     <ClCompile Include="opencvsample.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="IPcommon.h" />
+    <ClInclude Include="IPfilter.h" />
     <ClInclude Include="IPfunc.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
