--- a/shimizu/ComputerVisionStudy/MFCProject/MFCProject.vcxproj
+++ b/shimizu/ComputerVisionStudy/MFCProject/MFCProject.vcxproj
@@ -188,6 +188,7 @@
   <ItemGroup>
     <ClInclude Include="BilateralFilter.h" />
     <ClInclude Include="ColorSpaceDlg.h" />
+    <ClInclude Include="FourierTransform.h" />
     <ClInclude Include="Grayscale.h" />
     <ClInclude Include="HueFilter.h" />
     <ClInclude Include="HueFilterDlg.h" />
@@ -196,12 +197,15 @@
     <ClInclude Include="MainDlg.h" />
     <ClInclude Include="MedianFilter.h" />
     <ClInclude Include="MFCProject.h" />
+    <ClInclude Include="NonlocalMeansFilter.h" />
     <ClInclude Include="Original.h" />
     <ClInclude Include="PictureDlg.h" />
+    <ClInclude Include="PrimaryDifferentialFilter.h" />
     <ClInclude Include="ProcessDlg.h" />
     <ClInclude Include="Resize.h" />
     <ClInclude Include="ResizeDlg.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Sample.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Utility.h" />
@@ -209,6 +213,7 @@
   <ItemGroup>
     <ClCompile Include="BilateralFilter.cpp" />
     <ClCompile Include="ColorSpaceDlg.cpp" />
+    <ClCompile Include="FourierTransform.cpp" />
     <ClCompile Include="Grayscale.cpp" />
     <ClCompile Include="HueFilter.cpp" />
     <ClCompile Include="HueFilterDlg.cpp" />
@@ -217,11 +222,14 @@
     <ClCompile Include="MainDlg.cpp" />
     <ClCompile Include="MedianFilter.cpp" />
     <ClCompile Include="MFCProject.cpp" />
+    <ClCompile Include="NonlocalMeansFilter.cpp" />
     <ClCompile Include="Original.cpp" />
     <ClCompile Include="PictureDlg.cpp" />
+    <ClCompile Include="PrimaryDifferentialFilter.cpp" />
     <ClCompile Include="ProcessDlg.cpp" />
     <ClCompile Include="Resize.cpp" />
     <ClCompile Include="ResizeDlg.cpp" />
+    <ClCompile Include="Sample.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
