--- a/ktakayama/opencvsample/opencvsample/opencvsample.vcxproj
+++ b/ktakayama/opencvsample/opencvsample/opencvsample.vcxproj
@@ -149,6 +149,9 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="IPcommon.cpp" />
+    <ClCompile Include="IPfilter.cpp" />
+    <ClCompile Include="IPfunc.cpp" />
     <ClCompile Include="opencvsample.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
@@ -156,6 +159,7 @@
     <ClInclude Include="IPcommon.h" />
     <ClInclude Include="IPfilter.h" />
     <ClInclude Include="IPfunc.h" />
+    <ClInclude Include="opencvsample.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
