--- a/toyoshi/toyocv/modules/imgproc/CMakeLists.txt
+++ b/toyoshi/toyocv/modules/imgproc/CMakeLists.txt
@@ -8,8 +8,8 @@ SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2 -fpermissive -fPIC -pg")
 # デバッグビルド用オプション
 SET(CMAKE_CXX_FLAGS_DEBUG "-g -fpermissive -fPIC")
 # ビルドのタイプはリリース
-SET(CMAKE_BUILD_TYPE Release)
-#set(CMAKE_BUILD_TYPE Debug)
+# SET(CMAKE_BUILD_TYPE Release)
+set(CMAKE_BUILD_TYPE Debug)
 
 #set(CMAKE_CXX_FLAGS "$(CMAKE_CXX_FLAGS) -fpermissive")
 
@@ -56,8 +56,8 @@ SET_TARGET_PROPERTIES(toyocv_imgproc PROPERTIES VERSION ${serial} SOVERSION ${so
 #	      DESTINATION include/toyocv)
 if(WIN32)
   install(TARGETS toyocv_imgproc
-    RUNTIME DESTINATION path)
+    RUNTIME DESTINATION lib)
 else()
   install(TARGETS toyocv_imgproc
-    LIBRARY DESTINATION path)
+    LIBRARY DESTINATION lib)
 endif()
